<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shedule_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c04284d3"
    tools:context="com.example.administrator.signin_Teacher.schedule.ScheduleMainActivity">
    <LinearLayout
        android:id="@+id/scheduleDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/scheduleDisplay_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:text="我的课表"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.example.administrator.signin_Teacher.schedule.View_ScheduleBackground
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"/>
            <RelativeLayout
                android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/scheduleSet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/scheduleSet_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#c04284d3"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <com.example.administrator.signin_Teacher.schedule.ClearEditText
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="60dp"
            app:nameText="@string/className"
            app:nameSize="20"
            app:nameColor="@color/blue_one"/>
        <com.example.administrator.signin_Teacher.schedule.ClearEditText
            android:id="@+id/teacherName"
            android:layout_width="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_height="60dp"
            app:nameText="@string/teacherName"
            app:nameSize="20"
            app:nameColor="@color/blue_one"/>
        <com.example.administrator.signin_Teacher.schedule.ClearEditText
            android:id="@+id/classRoom"
            android:layout_width="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_height="60dp"
            app:nameText="@string/classRoom"
            app:nameSize="20"
            app:nameColor="@color/blue_one"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/blue_one"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/yesOrNo"/>
            <Spinner
                android:id="@+id/frequency"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:entries="@array/yesOrNo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/blue_one"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/week"/>
            <Spinner
                android:id="@+id/week"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:entries="@array/week"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/blue_one"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/classTime"/>
            <Spinner
                android:id="@+id/classTime"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:entries="@array/classTime"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="80dp">
            <com.example.administrator.signin_Teacher.schedule.RoundButton
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:layout_height="match_parent"
                app:backgroundColor="@color/blue_one"
                app:corners="30"
                android:text="@string/back"
                android:textColor="@color/white"/>
            <com.example.administrator.signin_Teacher.schedule.RoundButton
                android:id="@+id/delete"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                app:backgroundColor="@color/blue_one"
                app:corners="30"
                android:text="@string/delete"
                android:textColor="@color/white"/>
            <com.example.administrator.signin_Teacher.schedule.RoundButton
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_weight="2"

                android:layout_height="match_parent"
                app:backgroundColor="@color/blue_one"
                app:corners="30"
                android:text="@string/save"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
